--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(//https://fonts.googleapis.com/css?family=Cormorant+Garamond);
+@import url(//https://fonts.googleapis.com/icon?family=Material+Icons);
+
+html, body {
+    height: 100%;
+}
